# pixzor

./: .gitignore  CMakeLists.txt  Pixore-project.rtf  README.md  TODO-List.txt  how-to-build.txt  template-prompt.txt  vertex_shader.glsl
include/: Camera.h  ExtrusionManager.h  SelectionManager.h  VoxelWorld.h  glm_hash.h
src/: ExtrusionManager.cpp  SelectionManager.cpp  VoxelWorld.cpp  main.cpp
